--- a/references.bib
+++ b/references.bib
@@ -1,20 +1,44 @@
-@book{Xie2016,
-  title = {bookdown: Authoring Books and Technical Documents with {R} Markdown},
-  author = {Yihui Xie},
-  publisher = {Chapman and Hall/CRC},
-  address = {Boca Raton, Florida},
-  year = {2016},
-  isbn = {9781138700109},
-  url = {https://github.com/rstudio/bookdown},
+@article{Audretsch2007,
+  title = {Location: {{A Neglected Determinant}} of {{Firm Growth}}},
+  shorttitle = {Location},
+  author = {Audretsch, David B. and Dohse, Dirk},
+  year = {2007},
+  month = apr,
+  journal = {Review of World Economics},
+  volume = {143},
+  number = {1},
+  pages = {79--107},
+  issn = {1610-2878, 1610-2886},
+  doi = {10.1007/s10290-007-0099-7},
+  urldate = {2023-06-01},
+  langid = {english}
 }
 
-@book{Xie2018,
-  title = {R Markdown: The Definitive Guide},
-  author = {Yihui Xie and J.J. Allaire and Garrett Grolemund},
-  publisher = {Chapman and Hall/CRC},
-  address = {Boca Raton, Florida},
-  year = {2018},
-  isbn = {9781138359338},
-  url = {https://bookdown.org/yihui/rmarkdown},
+@article{Lang2014,
+  title = {Distance-Based Measures of Spatial Concentration: {{Introducing}} a Relative Density Function},
+  author = {Lang, Gabriel and Marcon, Eric and Puech, Florence},
+  year = {2020},
+  journal = {The Annals of Regional Science},
+  volume = {64},
+  pages = {243--265},
+  doi = {10.1007/s00168-019-00946-7}
 }
 
+@article{Marcon2014a,
+  title = {Generalization of the Partitioning of {{Shannon}} Diversity},
+  author = {Marcon, Eric and Scotti, Ivan and H{\'e}rault, Bruno and Rossi, Vivien and Lang, Gabriel},
+  year = {2014},
+  journal = {Plos One},
+  volume = {9},
+  number = {3},
+  pages = {e90289},
+  doi = {10.1371/journal.pone.0090289}
+}
+
+@book{R,
+  title = {R: {{A}} Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  year = {2023},
+  publisher = {{R Foundation for Statistical Computing}},
+  address = {{Vienna, Austria}}
+}
